# xroms

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements-opt.txt  requirements-pip.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yml  release.yaml  test.yaml
ci/: environment-py3.10.yml  environment-py3.11.yml  environment-py3.12.yml  environment-py3.13.yml  environment-py3.8.yml  environment-py3.9.yml
docs/: api.rst  calc.md  conf.py  environment.yml  index.rst  interpolation.md  io.md  plotting.md  select_data.md  whats_new.md
examples/: calc.ipynb  interpolation.ipynb  io.ipynb  load_data.ipynb  plotting.ipynb  select_data.ipynb  set_up_grid.ipynb
tests/: test_accessor.py  test_dummy.py  test_interp.py  test_load.py  test_utils.py  test_xroms.py
tests/input/: grid.nc  make_files.py  ocean_his_0001.nc  ocean_his_0002.nc
tests/input/ocean_his_0001/: .zmetadata
tests/input/ocean_his_0001/angle/: .zattrs
tests/input/ocean_his_0001/f/: .zattrs  0.0
tests/input/ocean_his_0001/hmin/: 0
tests/input/ocean_his_0001/lat_rho/: 0.0
tests/input/ocean_his_0001/lat_u/: .zattrs
tests/input/ocean_his_0001/lat_v/: 0.0
tests/input/ocean_his_0001/lat_vert/: 0.0
tests/input/ocean_his_0001/lon_psi/: 0.0
tests/input/ocean_his_0001/mask_rho/: 0.0
tests/input/ocean_his_0001/mask_u/: 0.0
tests/input/ocean_his_0001/mask_v/: .zattrs  0.0
tests/input/ocean_his_0001/ocean_time/: .zattrs
tests/input/ocean_his_0001/pn/: .zattrs  0.0
tests/input/ocean_his_0001/s_rho/: 0
tests/input/ocean_his_0001/temp/: .zarray
tests/input/ocean_his_0001/u/: .zarray  .zattrs  0.0.0.0
tests/input/ocean_his_0001/v/: .zarray  .zattrs
tests/input/ocean_his_0001/x_psi/: 0.0
tests/input/ocean_his_0001/x_rho/: .zattrs
tests/input/ocean_his_0001/x_u/: .zarray  .zattrs  0.0
tests/input/ocean_his_0001/x_v/: .zattrs  0.0
tests/input/ocean_his_0001/x_vert/: 0.0
tests/input/ocean_his_0001/y_psi/: 0.0
tests/input/ocean_his_0001/y_rho/: 0.0
tests/input/ocean_his_0001/y_u/: .zattrs
tests/input/ocean_his_0001/y_v/: 0.0
tests/input/ocean_his_0002/: .zattrs  .zmetadata
xroms/: __init__.py  accessor.py  basic_calcs.py  datasets.py  derived.py  interp.py  roms_seawater.py  utilities.py  vector.py  xroms.py
xroms/data/: datasets.py
xroms/tests/: test_accessor.py  test_derived.py  test_interp.py  test_load.py  test_roms_seawater.py  test_utils.py  test_vector.py  test_xroms.py
xroms/tests/input/: grid.nc  make_files.py  ocean_his_0001.nc  ocean_his_0002.nc
(+124 files in other folders)
