[metadata]
name = xroms
description = Commonly used scripts for working with ROMS output in xarray
author = Rob Hetland, Kristen Thyng, Veronica Ruiz Xomchuk
url = https://github.com/hetland/xroms
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE

[options]
zip_safe = False
install_requires =
    numpy
    xarray
    xgcm

python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    docs
    docs/*
    *.enc
    tests
    tests/*

[tool:pytest]
markers =
    web: marks tests require connection (deselect with '-m "not web"')
    serial: marks tests that cannot be run in parallel (deselect with '-m "not serial"')
