[metadata]
name = xroms
description = Package for working with ROMS output in xarray
author = Rob Hetland, Kristen Thyng, Veronica Ruiz Xomchuk
url = https://github.com/xoceanmodel/xroms
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE

# [options]
# zip_safe = False
# install_requires =
#     numpy
#     xarray
#     xgcm

# python_requires = >=3.6
# packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    examples
    examples/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[tool:pytest]
markers =
    web: marks tests require connection (deselect with '-m "not web"')
    serial: marks tests that cannot be run in parallel (deselect with '-m "not serial"')


[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = xroms/_version.py

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = kthyng@gmail.com

### make sure to fill in your dependencies!
[options]
install_requires =
    cf_xarray
    dask
    netcdf4
    numba >= 0.49
    numpy
    xarray
    xgcm >= 0.8.1
setup_requires=
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
